Fix layout issue in Chrome

--- a/css/thirst.css
+++ b/css/thirst.css
@@ -106,6 +106,7 @@ br {
 
 #content {
 	overflow: visible;
+	flex-basis: auto;
 }
 
 #editor-container {
